# term-cal

./: CHANGES.md  CMakeLists.txt  Calendar.cpp  Calendar.h  Database.cpp  Database.h  Date.cpp  Date.h  DateTime.cpp  DateTime.h  LICENSE  Note.cpp  Note.h  Parser.cpp  Parser.h  README.md  Task.cpp  Task.h  Time.cpp  Time.h  Token.cpp  Token.h  calendar-example.ics  sources.cmake  term-cal.cpp
test/: term-cal.fdb.txt  test_Calendar.cpp  test_Database.cpp  test_Date.cpp  test_DateTime.cpp  test_Note.cpp  test_Parser.cpp  test_Task.cpp  test_Time.cpp  test_Token.cpp
