# TermCal/CMakeLists.txt
# Created by Robin Rowe 2022-04-23
# License: Open source MIT

cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(TermCal)
message("Configuring ${PROJECT_NAME}...")
enable_testing()
file(STRINGS sources.cmake SOURCES)
add_library(${PROJECT_NAME}_lib ${SOURCES})
link_libraries(${PROJECT_NAME}_lib)
if(NOT WIN32 AND NOT APPLE)
	link_libraries(rt pthread)
endif(NOT WIN32 AND NOT APPLE)

option(UNISTD "Enable libunistd" false)
if(UNISTD)
	set(LIBUNISTD_PATH /code/github/libunistd)
	if(WIN32)
		include_directories(${LIBUNISTD_PATH}/unistd)
		link_directories(${LIBUNISTD_PATH}/build/unistd/Release)
		link_libraries(libunistd)
	endif(WIN32)
endif(UNISTD)

option(FLTK "Enable FLTK" false)
if(FLTK)
	set(FLTK_PATH /Code/fltk)
	include_directories(${FLTK_PATH} ${FLTK_PATH}/fltk-build ${FLTK_PATH}/fltk-src/)
	link_directories(${FLTK_PATH}/fltk-src/build/lib/Debug)
	set(FLTK_LIBS
		fltk_formsd
		fltk_gld
		fltk_imagesd
		fltk_jpegd
		fltk_pngd
		fltk_zd
		fltkd
	)
	link_libraries(${FLTK_LIBS} comctl32)
endif(FLTK)

add_executable(term-cal term-cal.cpp)
add_executable(test_Date test/test_Date.cpp)
add_test(test_Date test_Date)
add_executable(test_Time test/test_Time.cpp)
add_test(test_Time test_Time)
add_executable(test_DateTime test/test_DateTime.cpp)
add_test(test_DateTime test_DateTime)
add_executable(test_Calendar test/test_Calendar.cpp)
add_test(test_Calendar test_Calendar)
add_executable(test_Task test/test_Task.cpp)
add_test(test_Task test_Task)
add_executable(test_Note test/test_Note.cpp)
add_test(test_Note test_Note)
add_executable(test_Parser test/test_Parser.cpp)
add_test(test_Parser test_Parser)
